welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: not found: value equalOK
	} else if (a<=b && b<=c && equalOK==true) { 
                                   ^