welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	if (a<b && b<c) {
		return true
	} else if (a<=b && b<=c && equalOK==true) { 
		return true
	} else { 
		return false
	}
}
